Bug 1768632: Make EnumSet compile for MSVC. r=glandium

Differential Revision: https://phabricator.services.mozilla.com/D154338